Updated tutorials from TeamCity server (manually, should be automatic in future)
svn path=/trunk/matlab/; revision=2625


Former-commit-id: e9ac84c425bd3b6d301d54f516d2e1dc227fe302

--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -151,10 +151,22 @@
 						</ul>
 					</li>
 
-					<li><span class="folder">netCDF</span>
+					<li><span class="folder">nctools</span>
 						<ul>
 							<!-- ##BEGINFILEITEM -->
-							<li><a><span class="file" ref="html/tutorial_netCDF_create.html">Creating a netCDF file</span></a></li>
+							<li><a><span class="file" ref="html/nc_cf_grid_write_lat_lon_curvilinear_tutorial.html">_CF_GRID_WRITE_LAT_LON_CURVILINEAR_TUTORIAL   example of how to create a netCDF grid file of a curvi-linear lat-lon grid</span></a></li>
+
+							<li><a><span class="file" ref="html/nc_cf_grid_write_x_y_orthogonal_tutorial.html">_CF_GRID_WRITE_X_Y_ORTHOGONAL_TUTORIAL   example of how to create a netCDF grid file of an orthogonal lat-lon grid</span></a></li>
+
+							<li><a><span class="file" ref="html/nc_cf_grid_write_lat_lon_orthogonal_tutorial.html">_cf_grid_write_lat_lon_orthogonal_tutorial   example of how to create a netCDF grid file of an orthogonal lat-lon grid</span></a></li>
+							<!-- ##ENDFILEITEM -->
+						</ul>
+					</li>
+
+					<li><span class="folder">netcdf</span>
+						<ul>
+							<!-- ##BEGINFILEITEM -->
+							<li><a><span class="file" ref="html/tutorial_netCDF_create.html">Creating a netCDF file (basic)</span></a></li>
 
 							<li><a><span class="file" ref="html/tutorial_netCDF_read_functions.html">Reading a netCDF file</span></a></li>
 							<!-- ##ENDFILEITEM -->
@@ -172,7 +184,7 @@
 					<li><span class="folder">tips&tricks</span>
 						<ul>
 							<!-- ##BEGINFILEITEM -->
-							<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html">5. Keyword Value pairs</span></a></li>
+							<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html">Keyword Value pairs</span></a></li>
 
 							<li><a><span class="file" ref="html/TODO_tutorial.html">TODO function</span></a></li>
 							<!-- ##ENDFILEITEM -->
@@ -184,6 +196,14 @@
 			<li><span class="folder">Applications</span>
 				<ul>
 				<!-- ##BEGINAPPLICATIONS -->
+					<li><span class="folder">detran</span>
+						<ul>
+							<!-- ##BEGINFILEITEM -->
+							<li><a><span class="file" ref="html/detran_tutorial.html">detran_tutorial tutorial for Detran</span></a></li>
+							<!-- ##ENDFILEITEM -->
+						</ul>
+					</li>
+
 					<li><span class="folder">DUROS</span>
 						<ul>
 							<!-- ##BEGINFILEITEM -->
@@ -199,9 +219,9 @@
 
 							<li><a><span class="file" ref="html/kml_included_in_tutorial.html">Include KML in tutorial</span></a></li>
 
-							<li><a><span class="file" ref="html/KMLcontour3_tutorial.html">KMLcontour3</span></a></li>
+							<li><a><span class="file" ref="html/KMLcontour3_tutorial.html">KMLcontour3_tutorial tutorial for KMLcontour3</span></a></li>
 
-							<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline</span></a></li>
+							<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline_tutorial  tutorial for KMLline</span></a></li>
 							<!-- ##ENDFILEITEM -->
 						</ul>
 					</li>
