svn path=/trunk/matlab/; revision=3307
Former-commit-id: 6316681c1b28ca54f9fcf8b6d75f119f36d6146f

--- a/websites/dataviewer/test.html
+++ b/websites/dataviewer/test.html
@@ -144,11 +144,11 @@
 			lat = parseFloat(caseDoc.getElementsByTagName("lat")[value].childNodes[0].nodeValue);
 			alt = parseFloat(caseDoc.getElementsByTagName("height")[value].childNodes[0].nodeValue);
 
-  			var lookAt = ge.getView().copyAsLookAt(ge.ALTITUDE_RELATIVE_TO_GROUND);
-  			lookAt.setLatitude(lat);
-  			lookAt.setLongitude(lon);
-  			lookAt.setAltitude(alt);
-  			ge.getView().setAbstractView(lookAt);
+  			var camera = ge.getView().copyAsCamera(ge.ALTITUDE_RELATIVE_TO_GROUND);
+  			camera.setLatitude(lat);
+  			camera.setLongitude(lon);
+  			camera.setAltitude(alt);
+  			ge.getView().setAbstractView(camera);
   		}
 
 		// Fill in the listbox with datasources on the basis of the selected case
