Changed test.html to index.html
svn path=/trunk/matlab/; revision=3499


Former-commit-id: 83691eb47edb40819fb612a9a4144b276b5714f2

--- a/websites/dataviewer/editXml.html
+++ b/websites/dataviewer/editXml.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<script type="text/javascript" src="loadxmldoc.js"></script>
+	<script type="text/javascript" src="scripts/js/loadxmldoc.js"></script>
     <script type="text/javascript">
 		// Fill case-selection listbox with available cases
 		function fillCaseListbox(xmlFile)
