--- a/websites/dataviewer/index.html
+++ b/websites/dataviewer/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-	<link href="style.css" rel="stylesheets/stylesheet" type="text/css">
+	<link href="stylesheets/style.css" rel="stylesheet" type="text/css">
 	<script src="http://www.google.com/jsapi?key=ABQIAAAAJOL4Dbu6i1iFFND9tVK1SxQHoHevx5I6K4zDbyPuyuDTxIU2BBSC_Q4vihWvqWvnnV3Qbrdn-3QeAQ"></Script>
 	<script type="text/javascript" src="scripts/js/loadxmldoc.js"></script>
 	<script type="text/javascript" src="scripts/js/polydraw.js"></Script>
@@ -21,28 +21,6 @@
 			google.earth.createInstance("map3d", initCB, failureCB);
 			fillCaseListbox("cases.xml");
 		}
-
-		// Fill case-selection listbox with available cases
-		function fillCaseListbox(xmlFile)
-		{
-			// first remove all what is in the listbox
-			while(case_listbox.options.length!=0)
-			case_listbox.options.remove(0);
-
-			caseDoc=loadXMLDoc("xml/" + xmlFile);
-			numOfData=caseDoc.getElementsByTagName("title").length;
-
-			for (i=0;i<numOfData;i=i+1)
-			{
-			var oOption = document.createElement("OPTION");
-			oOption.text=caseDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue;
-			oOption.value=i;
-			oOption.class="vs";
-			case_listbox.options.add(oOption)
-			}
-			return true;
-		}
-
 
 		// Initialization for Google Earth
 		function initCB(instance)
@@ -127,13 +105,14 @@
 		}
 
 		// Call the MatLab SOAP interface, url: SOAP address, method: name
-		function CallMatLabSoap(url, method)
+		function CallMatLabSoap(url, method, source)
 		{
+
 			try
 			{
 				var pl = new SOAPClientParameters();
 				// Add variables from document
-				pl.add("kmlFile", "http://dtvirt13/test/ahn100.kmz");
+				pl.add("kmlFile", source);
 				pl.add("centreLatitude", pm.cent.lat.toDeg());
 				pl.add("centreLongitude", pm.cent.lon.toDeg());
 				pl.add("vertexLatitude", pm.rad.lat.toDeg());
@@ -161,6 +140,27 @@
 
 		// If Google Earth fails to load this function captures the Error Code
 		function failureCB(errorCode){}
+
+		// Fill case-selection listbox with available cases
+		function fillCaseListbox(xmlFile)
+		{
+			// first remove all what is in the listbox
+			while(caseSelect.options.length!=0)
+			caseSelect.options.remove(0);
+
+			caseDoc=loadXMLDoc("xml/" + xmlFile);
+			numOfData=caseDoc.getElementsByTagName("title").length;
+
+			for (i=0;i<numOfData;i=i+1)
+			{
+			var oOption = document.createElement("OPTION");
+			oOption.text=caseDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue;
+			oOption.value=i;
+			oOption.class="vs";
+			caseSelect.options.add(oOption)
+			}
+			return true;
+		}
 
 		// Load selected case
 		function loadCase(value)
@@ -192,6 +192,13 @@
 			ge.getFeatures().removeChild(feat);
 			}
 
+			// empty select lists
+			while(kmlForTimeseries.options.length!=0)
+			kmlForTimeseries.options.remove(0);
+
+			while(kmlForInterpolation.options.length!=0)
+			kmlForInterpolation.options.remove(0);
+
 			// set initial polygon
 			pm = new Polygon(0,0,0,0,document.getElementById('polygonselect').value);
 
@@ -199,20 +206,59 @@
 			xmlDoc=loadXMLDoc("xml/" + xmlfile);
 			numOfData=xmlDoc.getElementsByTagName("kml").length;
 
+			// create html-code of checkboxes for each kml found in the case xml and fill up the select lists
 			var dataSelectText = [];
 
 			for (i=0;i<numOfData;i=i+1)
 			{
-			dataSelectText = dataSelectText + "<input type='checkbox' class='s' id='" +
-			                    xmlDoc.getElementsByTagName("kml")[i].childNodes[0].nodeValue +
-			                    "' onclick='toggleKml(this)'>" +
-			                    xmlDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue + "<br>"
+				// checkboxes
+				dataSelectText = dataSelectText + "<input type='checkbox' class='s' id='" +
+									xmlDoc.getElementsByTagName("kml")[i].childNodes[0].nodeValue +
+									"' onclick='toggleKml(this)'>" +
+									xmlDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue + "<br>"
 
-			file = xmlDoc.getElementsByTagName("kml")[i].childNodes[0].nodeValue;
-			currentKmlObjects[file] = null;
+				file = xmlDoc.getElementsByTagName("kml")[i].childNodes[0].nodeValue;
+				currentKmlObjects[file] = null;
+
+				// select lists
+				if (xmlDoc.getElementsByTagName("type")[i].childNodes[0].nodeValue == "2dmap") // required for interpolate routine
+					{
+					var oOption = document.createElement("OPTION");
+					oOption.text=xmlDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue;
+					oOption.value=xmlDoc.getElementsByTagName("source")[i].childNodes[0].nodeValue;
+					oOption.class="vs";
+					kmlForInterpolation.options.add(oOption)
+					}
+				if (xmlDoc.getElementsByTagName("type")[i].childNodes[0].nodeValue == "station") // required for interpolate routine
+					{
+					var oOption = document.createElement("OPTION");
+					oOption.text=xmlDoc.getElementsByTagName("title")[i].childNodes[0].nodeValue;
+					oOption.value=xmlDoc.getElementsByTagName("source")[i].childNodes[0].nodeValue;
+					oOption.class="vs";
+					kmlForTimeseries.options.add(oOption)
+					}
 			}
 
 			document.getElementById("kml_sources").innerHTML =dataSelectText;
+
+			// check if select lists are empty
+			if (kmlForInterpolation.options.length==0)
+				{
+					var oOption = document.createElement("OPTION");
+					oOption.text="no suitable data";
+					oOption.value=0;
+					oOption.class="vs";
+					kmlForInterpolation.options.add(oOption)
+				}
+
+			if (kmlForTimeseries.options.length==0)
+				{
+					var oOption = document.createElement("OPTION");
+					oOption.text="no suitable data";
+					oOption.value=0;
+					oOption.class="vs";
+					kmlForTimeseries.options.add(oOption)
+				}
 		}
 
 	</script>
@@ -221,57 +267,61 @@
 <body onload='init()' id='body'>
 <h1>OpenEarth Data Viewer</h1>
 <hr/>
-<div style='float:left; width:350px; height:650px; overflow:auto'>
+<div style='float:left; width:350px; height:750px; overflow:auto'>
   <table style='font-size:small'>
+
+<!-- CASE SELECTION -->
 	<tr>
 		<td colspan="2">
-		<form name="caseSelect" action='javascript:void(0);'>
 		<h3>Select case</h3>
 		<p>
 		<select name="case" id="caseSelect" onchange="loadCase(this.value)" class="s">
 		  <option value="0" class="vs">Select case</option>
-		<script type="text/javascript">case_listbox=document.caseSelect.caseSelect</script>
-		</select><a href="editXml.html"> Add data to case</a>
+		</select>
+		<a href="editXml.html"> Add data to case</a>
 		</p>
-		</form>
 		<hr />
 		</td>
 	</tr>
 
+<!-- DATA SELECTION -->
 	<tr>
 	    <td colspan="2">
-	    <form name="dataSelect" action='javascript:void(0);'>
 	    <h3>Available data</h3>
 	    <p>
 	    <div id="kml_sources"></div>
 	    </p>
-	    </form>
 	    <hr />
 	    </td>
 	</tr>
+
+<!-- DRAWING TOOLS -->
 	<tr>
 		<td colspan="2">
-		<form id="polyShape" action='javascript:void(0);'>
-		<h3>Drawing</h3>
-		<p>
-		Use ctrl + mouse click to draw an object<br />
-		<br />
-		<select name="polygon" id="polygonselect" onchange='pm.numsides = this.value; pm.drawPolygon()' class="s">
-			<option value="2" class="vs">Line</option>
-			<option value="3" class="vs">Triangle</option>
-			<option value="4" class="vs">Square</option>
-			<option value="5" class="vs">Pentagon</option>
-			<option value="6" class="vs">Hexagon</option>
-			<option value="7" class="vs">Heptagon</option>
-			<option value="8" class="vs">Octagon</option>
-			<option value="9" class="vs">Nonagon</option>
-			<option value="10" class="vs">Decagon</option>
-			<option value="11" class="vs">Hendecagon</option>
-			<option value="12" class="vs">Dodecagon</option>
-			<option value="25" class="vs">Circle</option>
-		</select>
-		</p>
-		</form>
+			<h3>Drawing</h3>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<form id="polyShape" action='javascript:void(0);'>
+			<select name="polygon" id="polygonselect" onchange='pm.numsides = this.value; pm.drawPolygon()' class="s">
+				<option value="2" class="vs">Line</option>
+				<option value="3" class="vs">Triangle</option>
+				<option value="4" class="vs">Square</option>
+				<option value="5" class="vs">Pentagon</option>
+				<option value="6" class="vs">Hexagon</option>
+				<option value="7" class="vs">Heptagon</option>
+				<option value="8" class="vs">Octagon</option>
+				<option value="9" class="vs">Nonagon</option>
+				<option value="10" class="vs">Decagon</option>
+				<option value="11" class="vs">Hendecagon</option>
+				<option value="12" class="vs">Dodecagon</option>
+				<option value="25" class="vs">Circle</option>
+			</select>
+			</form>
+		</td>
+		<td>
+		Use ctrl + mouse click to draw
 		</td>
 	</tr>
 	<tr><td>Centre: </td	><td><span id='centre'></span></td></tr>
@@ -282,20 +332,35 @@
 	<tr><td>Area: </td><td><span id='are'></span></td></tr>
 	<tr><td colspan="2"><hr /></td></tr>
 
+<!-- ACTION SELECTION -->
 	<tr>
-		<td colspan="2">
+	  <td colspan="2">
 		<h3>Actions</h3>
-		<p>
- 			<button style="width:120;height:25" name="Interpoleer" value="Interpoleer" onClick="javascript:CallMatLabSoap('http://dtvirt13/ZMMatLab/Interpolate.asmx', 'InterpolateToLine');">Interpolate</button>
- 		</p>
- 		<p>
-			<button style="width:120;height:25" name="Plot timeseries" value="Plot timeseries" onClick="javascript:CallMatLabSoap('http://dtvirt13/ZMMatLab/PlotTimeSeries.asmx', 'PlotTimeSeries');">Plot timeseries</button>
-  		</p>
- 		</td>
+	  </td>
+	</tr>
+    <tr>
+      <td>
+ 		<button style="width:120;height:25" name="Interpoleer" value="Interpoleer" onClick="javascript:CallMatLabSoap('http://dtvirt13/ZMMatLab/Interpolate.asmx', 'InterpolateToLine', kmlForInterpolation.value);">Interpolate</button>
+ 	  </td>
+ 	  <td>
+ 	    <select name="kmlForInterpolation" id="kmlForInterpolation" class="s" style="width: 170px">
+ 	    	<option value="0" class="vs">Select case</option>
+		</select>
+	  </td>
+	</tr>
+	<tr>
+	  <td>
+     	<button style="width:120;height:25" name="Plot timeseries" value="Plot timeseries" onClick="javascript:CallMatLabSoap('http://dtvirt13/ZMMatLab/PlotTimeSeries.asmx', 'PlotTimeSeries', kmlForTimeseries.value);">Plot timeseries</button>
+      </td>
+      <td>
+ 	    <select name="kmlForTimeseries" id="kmlForTimeseries" class="s" style="width: 170px">
+ 	    	<option value="0" class="vs">Select case</option>
+		</select>
+ 	  </td>
 	</tr>
 </table>
 </div>
-<div id='map3d_container' style='border: 1px solid silver; height: 650px; margin-left:350px;'>
+<div id='map3d_container' style='border: 1px solid silver; height: 750px; margin-left:350px;'>
 	<div id='map3d' style='height: 100%;'></div>
 </div>
 <hr/>
