--- a/websites/dataviewer/public/index.html
+++ b/websites/dataviewer/public/index.html
@@ -284,6 +284,31 @@
 		</td>
 	</tr>
 
+<!-- MODE SELECTION (DATA, MODEL or TOOLS) -->
+	<tr>
+		<td colspan="2">
+		<h3>Select mode</h3>
+		</td>
+	</tr>
+	<form id="modeSelect" action='javascript:void(0);'>
+		<tr>
+			<td colspan="2">
+			<input type="radio" name="mode" value="data" />Data
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<input type="radio" name="mode" value="models" />Models
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<input type="radio" name="mode" value="tools" />Tools
+			</td>
+		</tr>
+	</form>
+	<hr />
+
 <!-- DATA SELECTION -->
 	<tr>
 	    <td colspan="2">
